* added password can't contain username to pass check in admin edit user form. (vaughan)
* default template form usable by core feature or any modules - system_default_form.html (malanciault)
* new function to list all fonts (stranger)
* new function to generate pdfs (stranger)
* implementing beforePreviewTarea and afterPreviewTarea preload events (malanciault)

'''Improved'''
* Improved how we use rtl in system. (stranger/real_therplima)
* Moved captcha to classes + some configurations were updated. (stranger)
* Updated TCPDF to version 4.0.023. (stranger)
* Removed warnings for unhandled global attribut in icms.htmlpurifier.php
* Updated jscalendar to 1.2 . (stranger)
* Time picker now works correctly with jalali (stranger/Ali Farhadi)
* Improving content manager page display to use displayTarea instead of previewTarea (malanciault)
* Changing sanitizeContentCss() to icms_sanitizeContentCss() (malanciault)
* #2011730: Installer: Check for phpOpenID requirements on install (malanciault/skenow)
* #2014053: Installer: Check for php5 on install (malanciault/skenow)
* #2091448: Installer: installation with safemode=on is not possible (malanciault/skenow)
* Correct implementation of TextEditor within IcmsForm, we are now using normal dhtmltarea as ImpressCMS will handle what editor needs to be displayed (malanciault)

'''Fixed'''
* pass_expired was not set to 0 after lost password request. (only happens if user uses lost password instead of reset password after encryption type is used). (vaughan)
* unable to login when using sha512 or whirlpool encryption.  hash produces 128 chars and db field is set to varchar(100). (vaughan)
* it was not possible to login using email address like v1.0 (vaughan)
* 2 errors with google meta tag and google analytics. (stranger)
* possible issue in modulesadmin/main.php (real_therplima/trabis)
* #2048746: SQL error when creating invites and system_customtags tables (Commerce)