@@ -11,6 +11,7 @@ ImpressCMS ChangeLog
 * new function to list all fonts (stranger)
 * new function to generate pdfs (stranger)
 * implementing beforePreviewTarea and afterPreviewTarea preload events (malanciault)
+* implementing IcmsPersistableSeoObject to manage SEO-enabled object within the IcmsPersistable Framework (malanciault)
 
 '''Improved'''
 * Improved how we use rtl in system. (stranger/real_therplima)
